# SharedMemoryRWPoC

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
core/: CMakeLists.txt  pch.h  source.cpp
core/internal/: internal.cpp  internal.h  shell.asm
core/memory/: memory.cpp  memory.h
core/ntdll/: defs.h  defsWin10.h  defsWin11.h  funcs.h
core/process/: process.cpp  process.hpp
core/secure/: syscalls.cpp  syscalls.hpp  syscallstubs.asm
core/utils/: utils.hpp
core/watcher/: watcher.hpp
